Fix visibility of plus button dropdown in table #LMR-1394

--- a/src/app/view/perspectives/table/table-perspective.component.scss
+++ b/src/app/view/perspectives/table/table-perspective.component.scss
@@ -2,8 +2,5 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-}
-
-.overflow-x-auto {
-  overflow-x: auto;
+  overflow: hidden;
 }
